--- a/index.html
+++ b/index.html
@@ -70,9 +70,58 @@
                 </div>
 
                 <div class="pageTwoImgContent">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium rerum fugit similique deserunt. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing eli. Laudantium rerum fugit similique deserunt. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
                 </div>
             </div>
+
+
+        </div>
+
+        <div class="pageThree">
+            <div class="pageThreeLeft">
+                <div class="pageThreeHeading">
+                    <h1>Hot</h1>
+                    <h1>Coffees</h1>
+                </div>
+
+                <div class="pageThreeButton">
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="pageThreeRight">
+                <div class="pageThreeImg">
+                    <img src="./images/hotCoffee.png" alt="Hot Coffee" width="100%">
+                </div>
+
+                <div class="pageThreeImgContent">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing el. Laudantium rerum fugit similique deserun. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="pageFour">
+            <div class="pageFourLeft">
+                <div class="pageFourHeading">
+                    <h1>White</h1>
+                    <h1>Coffees</h1>
+                </div>
+
+                <div class="pageFourButton">
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="pageFourRight">
+                <div class="pageFourImg">
+                    <img src="./images/whiteCoffee.png" alt="whiteCoffee" width="100%">
+                </div>
+
+                <div class="pageFourImgContent">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing eli. Laudantium rerum fugit similique deserunt. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </body>
