--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
             </div>
         </div>
 
-
         <div class="pageFour">
             <div class="pageFourLeft">
                 <div class="pageFourHeading">
@@ -123,6 +122,19 @@
 
 
         </div>
+
+        <div class="voucher">
+            <h1>Voucher</h1>
+            <div class="voucherImage">
+                <img src="./images/voucherImage.jpg" alt="Voucher Image">
+            </div>
+
+            <div class="getVoucherButton">
+                <button>Get Voucher Now</button>
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
