customer review added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
             </div>
         </div>
 
+        <div class="customerReview">
+            <h1>Customer Reviews</h1>
+            <div class="customerReviewContent">
+                <div class="customerOne">
+                    <img src="./images/customerOne.png" alt="Customer One Review">
+                    <h2>John Peter</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur . Autem modi dicta  alias ex et sapiente, quisquam distinctio consectetur culpa inventore incidunt, fugit, aliquid nemo impedit suscipit facere.</p>
+                </div>
+                <div class="customerTwo">
+                    <img src="./images/customerTwo.png" alt="Customer Two Review">
+                    <h2>Ella Thomson</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur . Autem modi dicta  alias ex et sapiente, quisquam distinctio consectetur culpa inventore incidunt, fugit, aliquid nemo impedit suscipit facere.</p>
+                </div>
+            </div>
+            <img src="./images/imageFive.png" alt="customer Review Curve" class="customerCurveBottom">
+        </div>
+
 
     </div>
 </body>
