--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div class="pageOneLeft">
                 <h1>Coffee Time</h1>
                 <h2>YOUR HEADLINE</h2>
+                <div class="topContainerImg">
+                    <img src="./images/whiteCoffee.png" alt="white coffee" width="100%">
+                </div>
 
                 <div class="pageOnePara">
                     Lorem ipsum dolor sit amet  adipisicing elit. Tempora  pariatur ljk kjdfk quibusdam accusamus officiis delectus incidunt.
@@ -56,8 +59,16 @@
         <div class="pageTwo">
             <div class="pageTwoLeft">
                 <div class="pageTwoHeading">
-                    <h1>Black</h1>
+                    <h1>Black </h1>
                     <h1>Coffees</h1>
+                </div>
+
+                <div class="pageTwoHiddenImg">
+                    <img src="./images//imageThree.png" alt="Black Coffee" width="100%">
+                </div>
+
+                <div class="pageTwoImgHiddenContent">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing eli. Laudantium rerum fugit similique deserunt. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
                 </div>
 
                 <div class="pageTwoButton">
@@ -78,10 +89,21 @@
         </div>
 
         <div class="pageThree">
+            <div class="pageThreeWave">
+                <img src="./images/imageFour.png" alt="Down Wave" width="100%">
+            </div>
             <div class="pageThreeLeft">
                 <div class="pageThreeHeading">
-                    <h1>Hot</h1>
+                    <h1>Hot </h1>
                     <h1>Coffees</h1>
+                </div>
+
+                <div class="pageThreeHiddenImg">
+                    <img src="./images/hotCoffee.png" alt="Hot Coffee" width="100%">
+                </div>
+
+                <div class="pageThreeHiddenContent">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing el. Laudantium rerum fugit similique deserun. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
                 </div>
 
                 <div class="pageThreeButton">
@@ -102,8 +124,16 @@
         <div class="pageFour">
             <div class="pageFourLeft">
                 <div class="pageFourHeading">
-                    <h1>White</h1>
+                    <h1>White </h1>
                     <h1>Coffees</h1>
+                </div>
+
+                <div class="pageFourHiddenImg">
+                    <img src="./images/whiteCoffee.png" alt="White Coffe " width="100%">
+                </div>
+
+                <div class="pageFourHiddenContent">
+                    <p>Lorem, ipsum dolor sit amet consectetur eum nisi modi, facilis nisi modi, facilis mollitia adipisicing eli. Laudantium rerum fugit similique deserunt. Provident eum nisi modi, facilis mollitia consequuntur molestiae. Illo at , porro est!</p>
                 </div>
 
                 <div class="pageFourButton">
@@ -126,7 +156,7 @@
         <div class="voucher">
             <h1>Voucher</h1>
             <div class="voucherImage">
-                <img src="./images/voucherImage.jpg" alt="Voucher Image">
+                <img src="./images/voucherImage.jpg" alt="Voucher Image" width="100%">
             </div>
 
             <div class="getVoucherButton">
