--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Coffee Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="main">
@@ -32,6 +33,15 @@
                     <h2>YOUR LOGO</h2>
                 </div>
             </div>
+        </div>
+
+        <div class="hamburgerMenu">
+            <a href="" class="navLeftAnchorHam">Home</a>
+            <a href="" class="navLeftAnchorHam">About</a>
+            <a href="" class="navLeftAnchorHam">Menu</a>
+            <a href="" class="navLeftAnchorHam">Blog</a>
+            <a href="" class="navLeftAnchorHam">Shop</a>
+            <a href="" class="navLeftAnchorHam">Contact</a>
         </div>
 
         <div class="pageOne">
@@ -168,12 +178,17 @@
             <h1>Customer Reviews</h1>
             <div class="customerReviewContent">
                 <div class="customerOne">
-                    <img src="./images/customerOne.png" alt="Customer One Review">
+                    <div class="customerImgCont">
+                        <img src="./images/customerOne.png" alt="Customer One Review" width="100%">
+                    </div>
                     <h2>John Peter</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur . Autem modi dicta  alias ex et sapiente, quisquam distinctio consectetur culpa inventore incidunt, fugit, aliquid nemo impedit suscipit facere.</p>
                 </div>
+
                 <div class="customerTwo">
-                    <img src="./images/customerTwo.png" alt="Customer Two Review">
+                    <div class="customerImgCont">
+                        <img src="./images/customerTwo.png" alt="Customer Two Review" width="100%">
+                    </div>
                     <h2>Ella Thomson</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur . Autem modi dicta  alias ex et sapiente, quisquam distinctio consectetur culpa inventore incidunt, fugit, aliquid nemo impedit suscipit facere.</p>
                 </div>
@@ -194,11 +209,14 @@
         </div>
 
         <div class="BranchContainer">
+            <div class="branchContHiddenImg">
+                <img src="./images/imageSIx.png" alt="Bottom wave image" width="100%">
+            </div>
             <h1>Our Branches</h1>
 
             <div class="branchCards">
                 <div class="cards">
-                    <img src="./images/cardOne.jpg" alt="Branch Card">
+                    <img src="./images/cardOne.jpg" alt="Branch Card" width="100%">
                     <div class="branchButton">
                         <button>New York</button>
                     </div>
@@ -207,7 +225,7 @@
                     </div>
                 </div>
                 <div class="cards">
-                    <img src="./images/cardTwo.png" alt="Branch Card">
+                    <img src="./images/cardTwo.png" alt="Branch Card" width="100%">
                     <div class="branchButton">
                         <button>Jakarta</button>
                     </div>
@@ -216,7 +234,7 @@
                     </div>
                 </div>
                 <div class="cards">
-                    <img src="./images/cardThree.png" alt="Branch Card">
+                    <img src="./images/cardThree.png" alt="Branch Card" width="100%">
                     <div class="branchButton">
                         <button>Paris</button>
                     </div>
