--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <span class="hamLine"></span>
                     <span class="hamLine"></span>
                 </div>
-                <a href="" class="navLeftAnchor">Home</a>
-                <a href="" class="navLeftAnchor">About</a>
-                <a href="" class="navLeftAnchor">Menu</a>
-                <a href="" class="navLeftAnchor">Blog</a>
-                <a href="" class="navLeftAnchor">Shop</a>
-                <a href="" class="navLeftAnchor">Contact</a>
+                <a href="#home" class="navLeftAnchor">Home</a>
+                <a href="#about" class="navLeftAnchor">About</a>
+                <a href="#menu" class="navLeftAnchor">Menu</a>
+                <a href="#blog" class="navLeftAnchor">Blog</a>
+                <a href="#shop" class="navLeftAnchor">Shop</a>
+                <a href="#contact" class="navLeftAnchor">Contact</a>
             </div>
             <div class="navRight">
                 <div class="navLogo">
@@ -36,15 +36,15 @@
         </div>
 
         <div class="hamburgerMenu">
-            <a href="" class="navLeftAnchorHam">Home</a>
-            <a href="" class="navLeftAnchorHam">About</a>
-            <a href="" class="navLeftAnchorHam">Menu</a>
-            <a href="" class="navLeftAnchorHam">Blog</a>
-            <a href="" class="navLeftAnchorHam">Shop</a>
-            <a href="" class="navLeftAnchorHam">Contact</a>
+            <a href="#home" class="navLeftAnchorHam">Home</a>
+            <a href="#about" class="navLeftAnchorHam">About</a>
+            <a href="#menu" class="navLeftAnchorHam">Menu</a>
+            <a href="#blog" class="navLeftAnchorHam">Blog</a>
+            <a href="#shop" class="navLeftAnchorHam">Shop</a>
+            <a href="#contact" class="navLeftAnchorHam">Contact</a>
         </div>
 
-        <div class="pageOne">
+        <div class="pageOne" id="home">
             <div class="pageOneLeft">
                 <h1>Coffee Time</h1>
                 <h2>YOUR HEADLINE</h2>
@@ -66,7 +66,7 @@
             <img src="./images/pageOneWaveBurger.png" alt="BurgerImage" class="pageOneBurger">
         </div>
 
-        <div class="pageTwo">
+        <div class="pageTwo" id="menu">
             <div class="pageTwoLeft">
                 <div class="pageTwoHeading">
                     <h1>Black </h1>
@@ -98,7 +98,7 @@
 
         </div>
 
-        <div class="pageThree">
+        <div class="pageThree" >
             <div class="pageThreeWave">
                 <img src="./images/imageFour.png" alt="Down Wave" width="100%">
             </div>
@@ -174,7 +174,7 @@
             </div>
         </div>
 
-        <div class="customerReview">
+        <div class="customerReview" id="blog">
             <h1>Customer Reviews</h1>
             <div class="customerReviewContent">
                 <div class="customerOne">
@@ -196,7 +196,7 @@
             <img src="./images/imageFive.png" alt="customer Review Curve" class="customerCurveBottom">
         </div>
 
-        <div class="restroTimingContainer">
+        <div class="restroTimingContainer" id="about">
             <h1>We are Open</h1>
             <div class="restroTimings">
                 <h2>Monday-Friday</h2>
@@ -208,7 +208,7 @@
             </div>
         </div>
 
-        <div class="BranchContainer">
+        <div class="BranchContainer" id="shop">
             <div class="branchContHiddenImg">
                 <img src="./images/imageSIx.png" alt="Bottom wave image" width="100%">
             </div>
@@ -248,7 +248,7 @@
         </div>
 
 
-        <div class="footer">
+        <div class="footer" id="contact">
 
             <div class="footerContent">
                 <div class="footerLeft">
