--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
             <div class="branchCards">
                 <div class="cards">
-                    <img src="./images/cardOne.jpg" alt="Branch Card" width="100%">
+                    <img src="./images/cardOne.jpg" alt="Branch Card">
                     <div class="branchButton">
                         <button>New York</button>
                     </div>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="cards">
-                    <img src="./images/cardTwo.png" alt="Branch Card" width="100%">
+                    <img src="./images/cardTwo.png" alt="Branch Card">
                     <div class="branchButton">
                         <button>Jakarta</button>
                     </div>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="cards">
-                    <img src="./images/cardThree.png" alt="Branch Card" width="100%">
+                    <img src="./images/cardThree.png" alt="Branch Card">
                     <div class="branchButton">
                         <button>Paris</button>
                     </div>
