--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
                 <div class="cards">
                     <img src="./images/cardOne.jpg" alt="Branch Card">
                     <div class="branchButton">
-                        <button>New York</button>
+                        <button>New York
+                            <div class="curve"></div>
+                        </button>
                     </div>
                     <div class="branchDesc">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum fugit vel ratione qui velit in obcaecati illo. Vel, itaque! earum fugit vel ratione qui velit</p>
@@ -227,7 +229,9 @@
                 <div class="cards">
                     <img src="./images/cardTwo.png" alt="Branch Card">
                     <div class="branchButton">
-                        <button>Jakarta</button>
+                        <button>Jakarta
+                            <div class="curve"></div>
+                        </button>
                     </div>
                     <div class="branchDesc">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum fugit vel ratione qui velit in obcaecati illo. Vel, itaque! earum fugit vel ratione qui velit</p>
@@ -236,7 +240,9 @@
                 <div class="cards">
                     <img src="./images/cardThree.png" alt="Branch Card">
                     <div class="branchButton">
-                        <button>Paris</button>
+                        <button>Paris
+                            <div class="curve"></div>
+                        </button>
                     </div>
                     <div class="branchDesc">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum fugit vel ratione qui velit in obcaecati illo. Vel, itaque! earum fugit vel ratione qui velit</p>
